crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__enums_result_javascript@enums__result.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
expression: apply_redactions(&output)
input_file: tests/enums/result.tlang
---
true
false
false
true
10

[stdin]:201
function panic(msg) { throw new Error(msg); }
                      ^

Error: Called unwrap on Err
    at panic ([stdin]:201:29)
    at Result.unwrap$0 [as unwrap] ([stdin]:53:16)
    at [STDIN_WRAPPER]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [STDIN_WRAPPER]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]

Node.js [VERSION]
